// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Intent Acceptance > gen-code-directive > prompt text snapshot 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Intent Acceptance > gen-code-spec > prompt text snapshot 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Intent Acceptance > gen-code-sys > prompt text snapshot 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "common/injections/ui-design-policy",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
]
`;

exports[`Intent Acceptance > gen-spec > prompt text snapshot 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "design/base/injections/document-language",
  "common/injections/action-context",
]
`;

exports[`Intent Acceptance > gen-sys-be > prompt text snapshot 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "design/base/injections/document-language",
  "design/base/injections/backend-guide",
  "common/injections/action-context",
]
`;

exports[`Intent Acceptance > gen-sys-fe > prompt text snapshot 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "design/base/injections/document-language",
  "design/base/injections/frontend-guide",
  "common/injections/action-context",
]
`;

exports[`Intent Acceptance > gen-sys-full > prompt text snapshot 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "design/base/injections/document-language",
  "common/injections/action-context",
]
`;

exports[`Intent Acceptance > gen-ui-desc > prompt text snapshot 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "design/base/injections/document-language",
  "common/injections/action-context",
]
`;

exports[`Intent Acceptance > gen-ui-figma > prompt text snapshot 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "design/base/injections/document-language",
  "common/injections/action-context",
]
`;

exports[`Intent Acceptance > gen-ui-ref > prompt text snapshot 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "design/base/injections/document-language",
  "common/injections/action-context",
]
`;

exports[`Intent Acceptance > rev-code > prompt text snapshot 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "code/base/injections/behavioral-debugging",
  "code/phases/execute/languages/typescript/environments/browser/rules",
  "code/base/injections/preview-setup",
  "code/base/injections/tool-calling-rules-compact",
  "code/base/injections/preview-env-contract",
  "code/phases/execute/injections/port-management",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Intent Acceptance > rev-spec > prompt text snapshot 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "design/base/injections/document-language",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Intent Acceptance > rev-sys > prompt text snapshot 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "design/base/injections/document-language",
  "design/base/injections/frontend-guide",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;

exports[`Intent Acceptance > rev-ui > prompt text snapshot 1`] = `
[
  "common/injections/directive",
  "common/injections/visual-source-authority",
  "common/injections/ui-design-policy",
  "design/base/injections/document-language",
  "common/injections/action-context",
  "common/injections/refactor-guidance",
]
`;
